styles/style.css
/* ... */
.container .dg-arrange-table-rows-close-icon{
	display: none;
	width: 10%;
	float: left;
	height: 50px;
}
.container .dg-arrange-table-rows-close-icon span{
	color: white;	
}
.ui-sortable-helper{
	background-color: white !important;	
}
.container .tr{
	padding: 1px;
	font-size: 12px;
	width: auto;
	height: auto;
	display: inline-block;
	border-radius: 5px;
	z-index: 2;
	cursor: pointer;
	background-color: rgba(0,0,0,0.01);
}
.draggable_focus_in{
	box-shadow: 0px 0px 20px #0550a5;
}
.container .th{
	padding: 5px;
	width: 20%;
	text-align: center;
	background-color: white;
	background-image: none !important;
}
.container .td{
	color: #333333;
	text-align: center;
}
.container .th:hover{
	cursor: default !important;

}
/* styling for grey status bar at the bottom of the screen */
#statusBar{
	position: fixed;
	bottom: 0;
	right: 0;
	width: 100%;
	height: 18px;
	background-color: rgba(200,200,200,.8);
	z-index: 1000;
}
#statusBar button{
	width: 18px;
	height: 18px;
	background-image: url(../images/Feedbin-Icon-home-edit1.png);
	background-repeat: no-repeat;
    background-position: center; 
	border: none;
	background-color: rgba(222,222,222,.0);
	cursor: pointer;
	float: right;
	transition: background-color 0.5s ease;	
	padding-top: 3px;
}
#timer{
	display: block;
	float: left;
	color: #333;
	font-size: 12px;
	padding-top: 3px;
	padding-right: 10px;
}
#version{
	display: block;
	float: right;
	color: #333;
	font-size: 12px;
	padding-top: 3px;
	padding-right: 10px;
	font-weight: 700;
}
#camTimer{
	display: block;
	float: right;
	color: #333;
	font-size: 12px;
	padding-top: 3px;
	padding-right: 10px;

}

/* styling for edit window that pops up when elements are clicked on in edit mode */
.editWindow{
	position: absolute;	
	right: 0px;
	top: 0px;
	width: 280px;
	height: 100vh;
	display: none;
	background-color: rgba(0,0,0,.5);
	border: 1px solid #000;
	padding: 10px;
	padding-top: 10px;
	padding-bottom: 10px;
	z-index: 101;
	color: #333;
	text-align: center;
	box-shadow: 0px 0px 3px #222;
	overflow: hidden;
}
.editWindowRow{
	height: auto;
	min-height: 35px;
	width: 250px;
	display: inline-block;
	text-align: center;
	margin: 10px;
	margin-top: 10px;
	margin-bottom: 10px;
}
.editWindowRow input{
	height: 28px;	
}
.editWindowRow label{
	margin: 2px;
	color: #999;
	display: inline-block;
	width: 30%;
	font-weight: 300;
	text-align: center;
	font-size: 16px;
	margin-bottom: 5px;
	margin-right: 15px;
}
.editWindow h2{
	margin-top: 5px;
	padding-top: 0;
	text-align: center;
	font-size: 32px;
	text-transform:capitalize;
	color: #999;
	margin-bottom: 0;
}
.editWindow hr{
	border: 0; 
	height: 1px; 
	background-image: linear-gradient(to right, rgba(153, 153, 153, 0), rgba(153, 153, 153, 0.75), rgba(153, 153, 153, 0));
}
#fontSizeLabel{
	float: left;
	margin-right: 20px !important;
}
#bgColorLabel, #textColorLabel{
	float: left;
	width: 98% !important;
	text-align: left !important;
}
#editBodyLabel{
	float: left;
}

.titleChange{
	width:60%;
}
.labelChange{
	width: 60%;
}
.roundingChange{
	width: 60%;	
}
#unitSelect{
	width: 60%;	
}
#hoverTime{
	width: 10% !important;	
}
#hoverRadios span{
	color: #ccc;
}
#hoverTimeRow label{
	width: 70%;	
}
.bodyChange{
	padding: 3px;
	width: 95%;
	background-color: #AAA;	
	color: #333;
	font-family: arial;
	font-size: 14px;
	height: 150px;
	border-color: #333;
}
.backgroundColorChange, .textColorChange{
	width: 96%;
}
.bodyChange:focus{
	border-color:#0550a5;	
}
.urlChange{
	width: 100%;
}
#createText, #resizeModule, #cropModule, #endCrop, #hideModule, #deleteModule, #createImg{
	width: 45%;
	height: 100px;
	float: left;
	font-size: 14px;
	margin-left: 10px;
}
#createText i, #hideModule i, #cropModule i, #resizeModule i, #endCrop i, #deleteModule i, #createImg i{
	display: block; 
	height: 40px;
}

#hideModule{
	margin-top: 15px;
}
#deleteModule{
	margin-top: 15px;
}
#resizeModule{
	display: none;
	margin-top: 15px;
}
#cropModule{
	margin-top: 15px;
}
#endCrop{
	display:none;
	margin-top: 15px;
}
/* all rows are hidden to start with - javascript unhides them when they are necessary */
#cropRow, #hideDelRow, #configRow, #staticRow, #zRow, #roundingRow, #unitRow #titleRow, #labelRow, #urlRow, #bodyRow, #fontSizeRow, #backgroundColorRow, #textColorRow{
	display:none;	
}
#bodyRow{
	height: auto;
	min-height: 60px;
}
#backgroundColorRow, #textColorRow{
	height: 50px;	
}
#backgroundColorRow span{
	text-align: left;	
}
#bodyRow span{
	text-align: left;	
}
#titleRow span{
	text-align: left;	
}
#labelRow span{
	text-align: left;	
}
#urlRow span{
	text-align: left;	
}
#fontSizeRow span{
	padding-top: 5px;
	width: 75px;
	float: left;
	text-align: left;
}
#opacityRow, #zRow{
	width: 100%;	
}
#opacityLabel{
	width: 100%;	
}
/*styling for file tree */
#stationTree{
	padding-top: 10px;
	background-color: rgba(255, 255, 255, 0.5);
	margin-right: 5px;
	margin-top: 20px;
	float: left;
	width: 100%;
	height: 450px;
	overflow-y: auto;
	box-shadow: inset 0px 0px 3px white;
	text-align: left !important;
	border: 3px solid #555;
}
/* class for the hovered cam that appears in chrome and safari*/
.webKitCam{
	box-shadow: 0px 0px 50px black;
	border: 1px solid black;
	max-height: 92vh;
	max-width: 92vw;		
}
/* class for the hovered cam that appears in firefox and IE*/
.expandedCam{
	position: fixed;
	left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%); /* IE 9 */
	box-shadow: 0px 0px 50px black;
	border: 1px solid black;
	max-height: 92vh;
	max-width: 92vw;
}
.focusedCam{
	z-index: 102;
	
}
/*Plugin fixes*/
.ui-state-disabled.ui-resizable-disabled { opacity : 1 !important; filter: alpha(opacity = 50); }
.ui-state-disabled.ui-draggable-disabled { opacity : 1 !important; filter: alpha(opacity = 50); }
ul.jstree-children{
	height: auto !important;	
}
.ui-draggable-helper {
	box-shadow: 0px 0px 10px black;
    background-repeat: no-repeat;
	background-size: contain;
	height: 500px;
	width: 500px;
}
/* ... */

